--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//data_process/data_to_sql.py=utf-8
 encoding//data_process/download_stock.py=utf-8
 encoding//data_process/get_data_center.py=utf-8
+encoding//data_process/native_data.py=utf-8
 encoding//data_process/online_data.py=utf-8
 encoding//live_trade/live_trade.py=utf-8
 encoding//strategy/macd_back_test.py=utf-8
