--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,8 @@
 
 # 日志设置
 [log]
-info_log_name=../Log/info.log
-error_log_name=../Log/error.log
+info_log_name=../Data/Log/info.log
+error_log_name=../Data/Log/error.log
 
 #交易阈值
 [trade_threshold]
