--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-  - "3.5"
+  - "2.7"
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 ./trade_process/live_trade.py
+  - python stock_trader.py
